core/unpackaged/main/default/objects/OrderSummary/OrderSummary.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>