core/unpackaged/main/default/objects/OrderSummary/fields/Allow_Split_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Split_Shipment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>indicates if user agreed to split shipment his order if it couldn't be fulfilled complete</description>
    <inlineHelpText>indicates if user agreed to split shipment his order if it couldn't be fulfilled complete</inlineHelpText>
    <label>Allow Split Shipment</label>
    <type>Checkbox</type>
</CustomField>