core/unpackaged/main/default/objects/OrderSummary/fields/Logistics_Information__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Information__c</fullName>
    <label>Logistics Information</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>