core/unpackaged/main/default/objects/OrderSummary/fields/Order_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_External_Id__c</fullName>
    <formula>OriginalOrder.External_Id__c</formula>
    <label>Order External Id</label>
    <type>Text</type>
</CustomField>