core/unpackaged/main/default/objects/OrderSummary/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <formula>TEXT(OriginalOrder.Status)</formula>
    <label>Order Status</label>
    <type>Text</type>
</CustomField>