core/unpackaged/main/default/objects/OrderSummary/fields/Ordered_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Date_Only__c</fullName>
    <formula>MID(TEXT(OrderedDate), 6, 2) &amp; "/" &amp;
MID(TEXT(OrderedDate), 9, 2) &amp; "/" &amp;
LEFT(TEXT(OrderedDate), 4)</formula>
    <label>Ordered Date Only</label>
    <type>Text</type>
</CustomField>