core/unpackaged/main/default/objects/OrderSummary/fields/Placed_By__c.field-meta.xml
<CustomField>
    <fullName>Placed_By__c</fullName>
    <formula>IF( CONTAINS( CreatedBy.Username , $CustomMetadata.Commerce_Setting__mdt.PPI_Commerce.Integration_Username__c), Account.Territory_Text__c,  CreatedBy.FirstName + ' ' + CreatedBy.LastName  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placed By</label>
    <type>Text</type>
</CustomField>