core/unpackaged/main/default/objects/OrderSummary/fields/PPI_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>PPI_Order_Number__c</fullName>
    <formula>IF(
    ISBLANK(Order_External_Id__c),
    OrderNumber,
    TRIM(LEFT(Order_External_Id__c, 6))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPI Order Number</label>
    <type>Text</type>
</CustomField>