core/unpackaged/main/default/objects/OrderSummary/fields/Ship_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Ship_Carrier__c</fullName>
    <formula>OriginalOrder.Ship_Carrier__c</formula>
    <label>Ship Carrier</label>
    <type>Text</type>
</CustomField>