core/unpackaged/main/default/objects/OrderSummary/fields/Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Ship_Date__c</fullName>
    <formula>MID(OriginalOrder.Ship_Date__c, 6, 2) &amp; "/" &amp;
MID(OriginalOrder.Ship_Date__c, 9, 2) &amp; "/" &amp;
LEFT(OriginalOrder.Ship_Date__c, 4)</formula>
    <label>Ship Date</label>
    <type>Text</type>
</CustomField>