core/unpackaged/main/default/objects/OrderSummary/fields/Ship_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Ship_Tracking__c</fullName>
    <formula>OriginalOrder.Ship_Tracking__c</formula>
    <label>Ship Tracking</label>
    <type>Text</type>
</CustomField>