core/unpackaged/main/default/objects/OrderSummary/fields/Third_Party_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Billing_City__c</fullName>
    <label>Third Party Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>