core/unpackaged/main/default/objects/OrderSummary/fields/Third_Party_Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Billing_Postal_Code__c</fullName>
    <label>Third Party Billing Postal Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>