core/unpackaged/main/default/objects/OrderSummary/fields/Third_Party_Billing_StateCode__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Billing_StateCode__c</fullName>
    <label>Third Party Billing StateCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>