core/unpackaged/main/default/objects/OrderSummary/fields/Third_Party_Billing_Street2__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Billing_Street2__c</fullName>
    <label>Third Party Billing Street2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>