core/unpackaged/main/default/objects/OrderSummary/fields/Warehouse_City__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_City__c</fullName>
    <formula>OriginalOrder.Warehouse_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse City</label>
    <type>Text</type>
</CustomField>