core/unpackaged/main/default/objects/OrderSummary/fields/Warehouse_Info__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Info__c</fullName>
    <formula>OriginalOrder.Warehouse_Name__c &amp; " - " &amp; OriginalOrder.Warehouse_City__c &amp; ", " &amp; OriginalOrder.Warehouse_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Info</label>
    <type>Text</type>
</CustomField>