core/unpackaged/main/default/objects/OrderSummary/fields/Warehouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Name__c</fullName>
    <formula>OriginalOrder.Warehouse_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Name</label>
    <type>Text</type>
</CustomField>