core/unpackaged/main/default/objects/OrderSummary/fields/Warehouse_State__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_State__c</fullName>
    <formula>OriginalOrder.Warehouse_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse State</label>
    <type>Text</type>
</CustomField>